--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
                 <a class="nav-link" href="#">Highscores</a>              
               </li>
             </ul>
-            <div class ="position-absolute top-50 end-0 translate-middle-y pe-50">10</div>
           </div>
         </div>
       </nav>
+
+      <div class="container d-flex flex-column">
+        <div class="text-danger align-self-end h3" id="timer"></div>
+        <div class="d-flex flex-column" id="main">
+          <div class="border text-center h1 py-5 bg-light" id="question">You have 60 seconds to solve 8 questions about JavaScript</div>
+          <Button class="btn btn-primary d-none border border-muted p-3 m-1 text-left" type="submit" id='option1' onmouseup=this.blur()></Button>
+          <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option2' onmouseup=this.blur()></Button>
+          <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option3' onmouseup=this.blur()></Button>
+          <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option4' onmouseup=this.blur()></Button>  
+        </div>
+        <input class="btn btn-primary flex align-center" type="submit" value="Start" id="startButton">
+      </div>
     
     <script src="./assets/script.js"></script>
+    
 </body>
 </html>
