--- a/index.html
+++ b/index.html
@@ -1,46 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css" type="text/css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>JavaScript Quiz</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">JavaScript Quiz</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Highscores</a>              
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
 
-      <div class="container d-flex flex-column">
-        <div class="text-danger align-self-end h3" id="timer"></div>
-        <div class="d-flex flex-column" id="main">
-          <div class="border text-center h1 py-5 bg-light" id="question">You have 60 seconds to solve 8 questions about JavaScript</div>
-          <Button class="btn btn-primary d-none border border-muted p-3 m-1 text-left" type="submit" id='option1' onmouseup=this.blur()></Button>
-          <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option2' onmouseup=this.blur()></Button>
-          <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option3' onmouseup=this.blur()></Button>
-          <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option4' onmouseup=this.blur()></Button>  
-        </div>
-        <input class="btn btn-primary flex align-center" type="submit" value="Start" id="startButton">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/style.css" type="text/css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>JavaScript Quiz</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">JavaScript Quiz</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="#"  onclick="home()">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"  onclick="clearDisplay()">Highscores</a>
+          </li>
+        </ul>
       </div>
-    
-    <script src="./assets/script.js"></script>
-    
+    </div>
+  </nav>
+
+  <div class="container d-flex flex-column">
+    <div class="text-danger align-self-end h3" id="timer"></div>
+    <div class="d-flex flex-column" id="main">
+      <div class="container d-grid my-4 d-none" id="scoreTable">
+        <div class="row">
+          <div class="col border">
+            Initials
+          </div>
+          <div class="col border">
+            Score
+          </div>
+          <div id="scores"></div>
+        </div>
+      </div>
+      <div class="border text-center h3 py-5 bg-light" id="info">
+        <p class="mb-5">You have 60 seconds to solve 8 questions about JavaScript.</p>
+        <p class="h5 mb-4">When a correct answer has been selected the option will turn green and the next question will
+          prompt.</p>
+        <p class="h5">When a wrong answer has been selected the option will turn red and 10 seconds will be removed from
+          the timer.</p>
+      </div>
+      <div class="border text-center h3 py-5 bg-light d-none" id="question"></div>
+      <Button class="btn btn-primary d-none border border-muted p-3 m-1 text-left" type="submit" id='option1'
+        onmouseup=this.blur()></Button>
+      <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option2'
+        onmouseup=this.blur()></Button>
+      <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option3'
+        onmouseup=this.blur()></Button>
+      <Button class="btn btn-primary d-none border border-muted p-3 m-1" type="submit" id='option4'
+        onmouseup=this.blur()></Button>
+    </div>
+    <div class="container d-flex flex-row justify-content-center">
+      <input class="d-none col-3 p-2 m-2" placeholder="Initials" id="initials" maxlength="3">
+      <Button class="d-none btn btn-primary col-3 p-2 m-2" type="submit" value="Save" id="saveButton">Save</Button>
+    </div>
+    <input class="btn btn-primary align-center py-2 d-none my-2" type="submit" value="Clear Scores" id="clearButton">
+    <input class="btn btn-primary align-center py-2" type="submit" value="Start" id="startButton">
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="./assets/script.js"></script>
+
 </body>
+
 </html>
